# subspace-daemon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  subspace-send  subspace-test.js
docs/: receptor-authoring.md  subspace-daemon-runbook.md
skill/: SKILL.md
skill/connection-management/: SKILL.md
skill/receptor-config/: SKILL.md
skill/sending-messages/: SKILL.md
skill/sink-config/: SKILL.md
src/: build_info.rs  config.rs  hard_failure.rs  ipc.rs  launchd.rs  logging.rs  main.rs  retry.rs  runtime_store.rs  setup.rs  state_lock.rs  storage.rs  supervisor.rs
src/attention/: embedding_plugin.rs  mod.rs  receptor.rs  scoring.rs
src/gateway/: client.rs  device_auth_store.rs  device_identity.rs  mod.rs  protocol.rs
src/subspace/: auth.rs  client.rs  identity.rs  mod.rs
support/: ai.openclaw.subspace-daemon.plist  news_pipeline_freshness_monitor.py
tests/: test_news_pipeline_freshness_monitor.py
