[package]
name = "subspace-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem", "rand_core"] }
futures-util = "0.3"
fs2 = "0.4"
http = "1.2"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "server", "tokio"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.15", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.18"
